
        CHANGES IN spatstat VERSION 1.65-0

OVERVIEW

    o We thank Tilman Davies, Pavel Fibich and
    Professor Shin-ichi Igarashi for contributions.

    o Important bug fix in simulation of log-Gaussian Cox processes.

    o New dataset 'concrete'

    o Increased speed for large datasets.

    o spatstat now requires spatstat.utils version >= 1.18-0

    o spatstat now requires spatstat.data version >= 1.7-0

    o Bug fixes and minor improvements.

    o Version nickname: "Famous Last Words"

NEW DATASETS

    o concrete
    Air bubbles in concrete.
    Kindly contributed by Professor Shin-ichi Igarashi.
    
SIGNIFICANT USER-VISIBLE CHANGES

    o dirichletEdges
    New argument 'clip'.

    o rSSI
    Accelerated.
    
    o overall speed
    Changes have been made to the internal code of spatstat 
    which should accelerate computations involving large datasets.

    o localpcf, localpcfinhom
    New argument 'rvalue'.

    o harmonise.im
    The result belongs to class 'solist' and 'imlist'
    so that it can be plotted.

BUG FIXES

    o rLGCP, simulate.kppm
    Simulation results for log-Gaussian Cox processes were incorrect
    unless the pixel dimensions and pixel spacings were identical
    on the horizontal and vertical axes. (If pixel dimensions were not
    specified, then the results were incorrect whenever the Frame of the
    simulation window was not a square.) 
    [Spotted by Tilman Davies.]
    Fixed.
    
    o crossdist.pp3
    Results with periodic=TRUE were partially incorrect.
    Fixed.
    
    o affine.owin
    For mask windows, the pixel resolution of the result
    was too fine, leading to very large datasets.
    Fixed.

    o affine.im
    If the transformation matrix was not diagonal, the pixel resolution
    of the result was too fine, leading to very large datasets.
    Fixed.

    o plot.ppp
    For a point pattern in a binary mask window,
    if both arguments 'col' and 'cols' were given,